# DevWayfinder

./: .gitignore  LICENSE  MVP_2.5_ANALYSIS.md  README.md  RELEASE_NOTES.md  pyproject.toml  pytest_output.txt  test_results_full.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package-smoke.yml  release.yml
benchmarks/: .gitignore  README.md  run_benchmarks.py
config/: config.example.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  PERFORMANCE.md  REQUIREMENTS.md  SETUP_OLLAMA.md  SETUP_OPENAI_OFFICIAL.md  TROUBLESHOOTING.md  USAGE.md
scripts/: test_llm_connection.py
src/devwayfinder/: __init__.py  __main__.py  version.py
src/devwayfinder/analyzers/: __init__.py  base.py  git_analyzer.py  graph_builder.py  metrics.py  python_analyzer.py  regex_extractor.py  start_here.py  structure.py
src/devwayfinder/benchmarks/: __init__.py  fixtures.py  runner.py
src/devwayfinder/cache/: __init__.py  manager.py  storage.py
src/devwayfinder/cli/: __init__.py  app.py  console.py  progress.py  templates.py
src/devwayfinder/core/: __init__.py  exceptions.py  graph.py  guide.py  models.py  protocols.py
src/devwayfinder/generators/: __init__.py  guide_generator.py  guide_template.py  mermaid.py
src/devwayfinder/providers/: __init__.py  base.py  config.py  factory.py  heuristic.py  ollama.py  openai.py  openai_compat.py
src/devwayfinder/summarizers/: __init__.py  concurrency.py  context_builder.py  controller.py  output_sanitizer.py  provider_chain.py  retry.py  templates.py
src/devwayfinder/utils/: __init__.py  tokens.py
tests/: conftest.py  test_analyzers.py  test_benchmarks.py  test_cache.py  test_cli.py  test_core.py  test_core_dependency_graph.py  test_coverage_gaps.py  test_coverage_stability.py  test_final_coverage.py  test_generators.py  test_git_analyzer.py  test_guide_templates.py  test_integration.py  test_mermaid.py  test_metrics.py  test_output_sanitizer.py  test_packaging.py  test_provider_integration_real.py  test_providers.py  test_start_here.py  test_summarizers.py  test_summarizers_context.py  test_tokens.py
tests/fixtures/sample_project/: README.md  pyproject.toml
tests/fixtures/sample_project/src/: __init__.py  core.py  utils.py
